# crud-rust

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2024-12-30-091955_task/: down.sql  up.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
