[package]
name = "test-app"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.2.0", features = ["postgres","r2d2","chrono"] }
actix-web = "4.0"
actix-rt = "2.5"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11.6"
validator = { version = "0.19", features = ["derive"] }
validator_derive = "0.19"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
log = "0.4"
